Removed unrelated test code. Rearranged 3d model code for clarity. Corrected for hidden asteroid ore allowing rare ore to show. Allowed ore selection to Asteroid file import.

--- a/Main/SEToolbox/SEToolbox/App.xaml
+++ b/Main/SEToolbox/SEToolbox/App.xaml
@@ -41,6 +41,46 @@
             </Setter>
         </Style>
 
+        <Style x:Key="SpinUpButton" TargetType="{x:Type Button}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="Transparent">
+                            <Path x:Name="path" StrokeThickness="1" Fill="Black" Data="M 0,5 L 10,5 L 5,0 L 0,5" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="path" Property="Margin" Value="1,1,0,0" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="path" Property="Fill" Value="Gray" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="SpinDownButton" TargetType="{x:Type Button}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="Transparent">
+                            <Path x:Name="path" StrokeThickness="1" Fill="Black" Data="M 0,0 L 5,5 L 10,0 L 0,0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="path" Property="Margin" Value="1,1,0,0" />
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="path" Property="Fill" Value="Gray" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style x:Key="ToolBarMenu" TargetType="{x:Type Menu}">
             <Setter Property="Panel.Background" Value="Transparent" />
         </Style>
