--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -337,15 +337,15 @@
                             </controls:SortableListView>
                             <GridSplitter Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="4" />
                             <StackPanel Grid.Row="2">
-
+                                <TextBlock Text="Preview" FontSize="20" Foreground="#80808080" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,-20,0" IsHitTestVisible="False">
+                                    <TextBlock.RenderTransform>
+                                        <RotateTransform Angle="45"/>
+                                    </TextBlock.RenderTransform>
+                                </TextBlock>
                             </StackPanel>
                         </Grid>
                     </Grid>
-                    <TextBlock Text="Preview" FontSize="60" Foreground="#80808080" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,-100,-100,0" IsHitTestVisible="False">
-                        <TextBlock.RenderTransform>
-                            <RotateTransform Angle="45"/>
-                        </TextBlock.RenderTransform>
-                    </TextBlock>
+                  
                     <controls:BusyIndicator Visibility="{Binding IsSubsSystemNotReady, Converter={StaticResource BooleanToVisibilityConverter}}" />
                 </Grid>
             </TabItem>
