Added progress bars to common long running operations. Added default cube to cube changer. WIP on resource report.

--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -33,6 +33,9 @@
             <Binding Path="ActiveWorld.SessionName"/>
         </MultiBinding>
     </Window.Title>
+    <Window.TaskbarItemInfo>
+        <TaskbarItemInfo ProgressState="{Binding ProgressState}" ProgressValue="{Binding ProgressValue}" />
+    </Window.TaskbarItemInfo>
     <Grid IsEnabled="{Binding IsActive}">
         <DockPanel>
             <Menu DockPanel.Dock="Top">
