--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -190,7 +190,7 @@
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=fit_to_size}"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Command="{Binding MergeShipCommand}" Header="Rejoin Ships" Style="{StaticResource ToolBarTopMenuitem}" ToolTip="Rejoins 2 parts from a broken ship togeather">
+                <MenuItem Command="{Binding RejoinShipCommand}" Header="Rejoin Ships" Style="{StaticResource ToolBarTopMenuitem}" ToolTip="Rejoins 2 parts from a broken ship togeather">
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=elements2}"/>
                     </MenuItem.Icon>
