Add Resource Report export to Xml file. Switched application to new binary loading method as normal, and added /OLDDLL switch for old method. Added in temp directory cleaner. WIP on new voxel conversion for asteroids.

--- a/Main/SEToolbox/SEToolbox/Views/WindowResourceReport.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowResourceReport.xaml
@@ -46,6 +46,7 @@
                             <MenuItem Header="Clipboard" Command="{Binding CopyCommand}"/>
                             <MenuItem Header=".txt file" Command="{Binding ExportTextCommand}"/>
                             <MenuItem Header=".html file" Command="{Binding ExportHtmlCommand}"/>
+                            <MenuItem Header=".xml file" Command="{Binding ExportXmlCommand}"/>
                         </ContextMenu>
                     </Button.ContextMenu>
                 </Button>
